--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,20 +7,21 @@
     android:layout_height="match_parent"
     tools:context="com.teambahai.coralandpearls.MainActivity">
     
-    <fragment
-        android:name="com.teambahai.coralandpearls.ProfileFragment"
+    <FrameLayout
         android:id="@+id/fragment_container_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </fragment>
+    </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
-        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
-        android:background="?android:attr/windowBackground"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@drawable/selector_nav_view_main"
+        app:itemTextColor="@drawable/selector_nav_view_main"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
