--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorPrimary">#FFD2D2</color>
+    <color name="colorPrimaryDark">#FF8686</color>
+    <color name="colorAccent">#C7F1C7</color>
+    <color name="colorAccentDark">#6CCE6C</color>
+    <color name="white">#FFFFFF</color>
 </resources>
