--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,23 +3,78 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context="com.teambahai.coralandpearls.ProfileFragment">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="128dp"
-        android:src="@drawable/ic_person_black_24dp" />
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
         android:textAlignment="center"
-        android:text="Diego Vinasco"
-        android:textSize="32dp"/>
+        android:text="You"
+        android:textSize="32dp"
+        android:textColor="@color/black"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="256dp"
+        android:src="@drawable/ic_person_black_48dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#222222"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#AAAAAA"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:textSize="16dp"
+        android:id="@+id/profile_preferences_button"
+        android:gravity="center"
+        android:text="My Profile"
+        android:textColor="@color/black"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#AAAAAA"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:textSize="16dp"
+        android:id="@+id/profile_account_button"
+        android:gravity="center"
+        android:text="My Account"
+        android:textColor="@color/black"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#AAAAAA"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:textSize="16dp"
+        android:id="@+id/profile_settings_button"
+        android:gravity="center"
+        android:text="My Settings"
+        android:textColor="@color/black"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#AAAAAA"/>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,19 +84,22 @@
             <RadioGroup
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="Gender"
-                    android:textSize="18dp"/>
+                    android:textSize="18dp" />
+
                 <RadioButton
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Male"/>
+                    android:text="Male" />
+
                 <RadioButton
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Female"/>
+                    android:text="Female" />
 
             </RadioGroup>
 
@@ -50,59 +108,63 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="date"
-                android:hint="Birthdate"/>
+                android:hint="Birthdate"
+                android:inputType="date" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="text"
-                android:hint="Where did you go to school?"/>
+                android:hint="Where did you go to school?"
+                android:inputType="text" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="text"
-                android:hint="What is your current job?"/>
+                android:hint="What is your current job?"
+                android:inputType="text" />
 
             <Switch
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Have you ever been married?"/>
+                android:text="Have you ever been married?" />
 
             <Switch
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Do you have any children? "/>
+                android:text="Do you have any children? " />
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="What is your religious belief?"/>
+                android:hint="What is your religious belief?" />
 
             <RadioGroup
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="I am interested in"/>
+                    android:text="I am interested in" />
+
                 <RadioButton
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Men"/>
+                    android:text="Men" />
+
                 <RadioButton
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Women"/>
+                    android:text="Women" />
+
                 <RadioButton
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Both"/>
+                    android:text="Both" />
 
             </RadioGroup>
 
@@ -111,116 +173,125 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number"
-                android:hint="Between age..."/>
+                android:hint="Between age..."
+                android:inputType="number" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number"
-                android:hint="...and"/>
+                android:hint="...and"
+                android:inputType="number" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number"
-                android:hint="Within a distance of"/>
+                android:hint="Within a distance of"
+                android:inputType="number" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="text"
-                android:hint="I am looking for"/>
+                android:hint="I am looking for"
+                android:inputType="text" />
 
             <Switch
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Do you accept someone with children? "/>
+                android:text="Do you accept someone with children? " />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="How well do you think you know yourself?"/>
+                android:text="How well do you think you know yourself?" />
+
             <SeekBar
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="How extroverted vs introverted are you?"/>
+                android:text="How extroverted vs introverted are you?" />
+
             <SeekBar
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="How organized vs flexible?"/>
+                android:text="How organized vs flexible are you?" />
+
             <SeekBar
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="How driven vs relaxed?"/>
+                android:text="How driven vs relaxed?" />
+
             <SeekBar
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="How practical vs imaginative?"/>
+                android:text="How practical vs imaginative?" />
+
             <SeekBar
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="When my friend is having a difficult time, I would..."/>
+                android:text="When my friend is having a difficult time, I would..." />
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="When I am having a difficult time, I would like my friends to..."/>
+                android:text="When I am having a difficult time, I would like my friends to..." />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="When spending time with my significant other, I like to be..."/>
+                android:text="When spending time with my significant other, I like to be..." />
+
             <SeekBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="How important is religion/God in your life?"/>
-            <SeekBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="How important is religion/God in your life?" />
 
-            <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="How important is helping others to you?"/>
             <SeekBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="How taboo is sex outside of marriage to you?"/>
+                android:text="How important is helping others to you?" />
+
+            <SeekBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="How taboo is sex outside of marriage to you?" />
+
             <SeekBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -228,42 +299,42 @@
             <Switch
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Do you smoke cigarettes? "/>
+                android:text="Do you smoke cigarettes? " />
 
             <Switch
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Do you drink alcohol? "/>
+                android:text="Do you drink alcohol? " />
 
             <Switch
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Do you take recreational drugs? "/>
+                android:text="Do you take recreational drugs? " />
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Which virtues best describe you?"/>
+                android:hint="Which virtues best describe you?" />
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Which virtues are most important to you in a partner?"/>
+                android:hint="Which virtues are most important to you in a partner?" />
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Which types of services sound most exciting to you?"/>
+                android:hint="Which types of services sound most exciting to you?" />
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Which social issues are most important to you?"/>
+                android:hint="Which social issues are most important to you?" />
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="What are your five favorite things to do with your free time?"/>
+                android:hint="What are your five favorite things to do with your free time?" />
 
         </LinearLayout>
 
