--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFD2D2</color>
-    <color name="colorPrimaryDark">#FF8686</color>
-    <color name="colorAccent">#C7F1C7</color>
-    <color name="colorAccentDark">#6CCE6C</color>
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#CCCCCC</color>
+    <color name="colorAccent">#000000</color>
+    <color name="colorAccentDark">#333333</color>
+    <!--<color name="colorPrimary">#FFD2D2</color>-->
+    <!--<color name="colorPrimaryDark">#FF8686</color>-->
+    <!--<color name="colorAccent">#C7F1C7</color>-->
+    <!--<color name="colorAccentDark">#6CCE6C</color>-->
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
