--- a/app/src/main/res/layout/fragment_connections.xml
+++ b/app/src/main/res/layout/fragment_connections.xml
@@ -1,12 +1,31 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical"
     tools:context="com.teambahai.coralandpearls.ConnectionsFragment">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="128dp"
-        android:src="@drawable/ic_heart_black_24dp"/>
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="6dp"
+        android:src="@drawable/ic_chat_black_48dp"/>
 
-</FrameLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#222222"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#AAAAAA"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="You have no matches..."/>
+
+</LinearLayout>
