--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -1,12 +1,145 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/white"
     tools:context="com.teambahai.coralandpearls.DiscoverFragment">
 
-    <ImageView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="128dp"
-        android:src="@drawable/ic_hand_black_24dp"/>
+        android:layout_height="wrap_content"
+        android:text="[Name]"
+        android:textAlignment="center"
+        android:padding="6dp"
+        android:textSize="42sp"
+        android:textColor="@color/black"/>
 
-</FrameLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#222222"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#AAAAAA"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="256dp"
+                android:padding="24dp"
+                android:src="@drawable/ic_face_black_48dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#444444"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#DDDDDD"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="32dp"
+                android:text='"Lorem ipsum dolor sit amet, consectetur adipiscing elit."'
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="28sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#DDDDDD"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#444444"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="256dp"
+                android:padding="24dp"
+                android:src="@drawable/ic_face_black_48dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#444444"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#DDDDDD"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="32dp"
+                android:text='"Quis nostrud exercitation ullamco laboris nisi ex ea commodo consequat."'
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="28sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#DDDDDD"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#444444"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="256dp"
+                android:padding="24dp"
+                android:src="@drawable/ic_face_black_48dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#444444"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#DDDDDD"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="32dp"
+                android:text="About:\n- Ut ut nibh dolor\n- Ignissim a dui\n- Donec libero"
+                android:textAlignment="textStart"
+                android:textColor="@color/black"
+                android:textSize="28sp"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#DDDDDD"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#444444"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="256dp"
+                android:padding="24dp"
+                android:src="@drawable/ic_face_black_48dp" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
+</LinearLayout>
